--- a/public/static/css/modules/ModPricing/partials/_template.scss
+++ b/public/static/css/modules/ModPricing/partials/_template.scss
@@ -4,15 +4,13 @@
 
 .pricing {
 
-  h5 {
-    font-size: 1.1em;
-  }
-
   .header-dist {
     padding-top: 20px;
+    margin-top: 20px;
 
     @media only screen and (min-width: $mediumWidth) {
       padding: 20px 0 60px 0;
+      margin-top: 40px;
     }
   }
 
@@ -44,6 +42,14 @@
         padding: 20px 20px 0 20px;
       }
     }
+  }
+
+  h4 {
+    margin-bottom: 30px;
+  }
+
+  h5 {
+    font-size: 1.1em;
   }
 
   .border-bottom {
